# TrueShuffle

./: .env.example  .gitignore  .last_date.txt  CHANGELOG.md  Dockerfile  README.md  bulk_generate.py  bulk_generate_2.py  bulk_generate_csv.py  bulk_generate_music.py  env_filter.sh  expand_history.py  fast_git_reset.py  fast_git_reset_music.py  generate_patches.py  index.html  package-lock.json  package.json  rebuild_history.py  rebuild_history_2.py  rebuild_history_music.py  task.md  tsconfig.json  update_test.py  vite.config.ts  zip_clean.py  zip_repo.py
.github/workflows/: python-app.yml
backend/: __init__.py  __main__.py  analytics.py  app.py  audio_features.py  cache.py  cross_platform_service.py  dummy_log.txt  embedding_engine.py  feature_flags.py  generator.py  graph_engine.py  health.py  middleware.py  models.py  nlp_commands.py  normalization.py  playlist_export.py  preferences.py  queue_manager.py  rate_limiter.py  requirements.txt  rl_agent.py  service.py  session_context.py  simulation.py  storage.py  sync_engine.py  voice_dj.py
backend/analytics/: tasks.py  tracker.py
backend/api/: history.py  playlists.py  search.py  social.py  stream.py  tracks.py
backend/assistant/: cloud.py  (+10 more)
my-task/: instruction.md  reference_plan.md  task.toml
scripts/: esbuild-wrapper.cmd  frontend.mjs
src/: App.tsx  bridge.ts  crossPlatformMock.ts  mock.ts  styles.css  types.ts  utils.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: adaptive_backend.rs  auth.rs  error.rs  main.rs  mock.rs  queue.rs  shuffle.rs  spotify.rs  state.rs  types.rs
(+533 files in other folders)
