[package]
name = "trueshuffle"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1" }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
keyring = "2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "1" }
thiserror = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2"
urlencoding = "2"
webbrowser = "1"

